--- a/SimpleComputer/SimpleComputer/SimpleComputer.csproj
+++ b/SimpleComputer/SimpleComputer/SimpleComputer.csproj
@@ -55,6 +55,9 @@
     <Compile Include="MySimpleComputer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SomeCostomForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
